feat: add enpoint to upload files
